fixed broken css comment that broke animation

--- a/styles.css
+++ b/styles.css
@@ -126,7 +126,7 @@ p{
     animation: slideLeft 1s forwards; 
 }
 .slide-right {
-    animation: slideRight 1s forwards; /* cubic-bezier(0.21, 0.37, 0.36, 0.99); 
+    animation: slideRight 1s forwards; /* cubic-bezier(0.21, 0.37, 0.36, 0.99); */
 }
 
 @keyframes slideLeft {
